--- a/index.html
+++ b/index.html
@@ -5,55 +5,22 @@
   <meta content="width=device-width"></meta> 
   <meta initial-scale=1"></meta>
   <title>Billy Wayne McCann, Ph.D.</title>
-
-  <style type="text/css">
-    body {
-      margin:40px auto;
-      max-width:650px;
-      line-height:1.6;
-      font-size:18px;
-      color:#444;
-      padding:0 10px;
-      text-align:center;
-      background-color:#fdf6e3;
-    }
-
-    h1,h2,h3 {
-      line-height:1.2;
-      text-align: center;
-    }
-
-    h4 {
-        text-align: center
-    }
-
-    .center-text {
-        text-align: center
-    }
-
-    a:link, a:visited, a:active, a:hover {
-      color:#444;
-      <!--      text-decoration: none; -->
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1>Billy Wayne McCann, Ph.D.</h1>
-  <br>
-  <h2><a href="/research.html">Research</a></h2>
-  <h2><a href="/documents/cv.pdf">Curriculum Vitae</a></h2>
-  <h2><a href="/documents/Chemistry_in_silico.pdf">Dissertation</a></h2>
-  <br> 
-  <h4><a href="/converter.html">Energy Converter</a></h4>
-  <h4><a href="http://molcalc.org/">Online Quantum Chemistry</a></h4>
-  <br>
-  <a href="http://github.com/thebillywayne"> <img src="/images/github32.png" border="0"/></a>
-  <a href="https://www.linkedin.com/pub/billy-wayne-mccann/78/213/47b"> <img src="/images/linked32.png" height="32" width="32" border="0" alt=" LinkedIn"/> </a>
-  <a href="https://plus.google.com/+BillyWayneMcCann/about"> <img src="/images/gplus-32.png" style="border:0;width:32px;height:32px;"/> </a>
-  <a href="mailto:mccannbw@outlook.com"> <img src="/images/email32_sol.png" height="32" width="32" border="0" alt="Email"</> </a>
-  <br><br>
-  <img src="/images/Rising_Phoenix_2_small_sol.jpg"</img>
-  <br><br>
+  <div class="main-links">
+    <p><a href="/publications.html">Publications</a></p>
+    <p><a href="/documents/cv.pdf">Curriculum Vitae</p></a>
+    <p><a href="/documents/Chemistry_in_silico.pdf">Dissertation</a></p>
+  </div class="other-links">
+  <p><a href="/converter.html">Energy Converter</a></p>
+  <p><a href="http://molcalc.org/">Online Quantum Chemistry</a></p>
+  <div class="social-media-logo-links">
+    <a href="http://github.com/exergonic"> <img src="/images/github32.png" border="0"/></a>
+    <a href="https://www.linkedin.com/pub/billy-wayne-mccann/78/213/47b"> <img src="/images/linked32.png" height="32" width="32" border="0" alt="LinkedIn"/></a>
+    <a href="mailto:thebillywayne@gmail.com"> <img src="/images/email32_sol.png" height="32" width="32" border="0" alt="Email"</> </a>
+  </div>
 
 </body>
