mv research --> publications

--- a/publications.html
+++ b/publications.html
@@ -2,32 +2,11 @@
 <head>
     <meta name="viewport" charset="UTF-8" content="width=device-width, initial-scale=1">
     <title>Billy Wayne McCann, Ph.D.: Research</title>
-    <style type="text/css">
-    body {
-        margin:40px auto;
-        max-width:650px;
-        line-height:1.6;
-        font-size:18px;
-        color:#444;
-        padding:0 10px;
-        text-align:center;
-        background-color:#fdf6e3;
-    }
-
-    h1,h2,h3 {
-        line-height:1.2
-    }
-
-    a:link, a:visited, a:active, a:hover {
-        color:#444;
-            <!--      text-decoration: none; -->
-    }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h2 style="text-align:center">Publications</h2>
+    <h1>Publications</h1>
     <div style=text-align:left>
         <ol reversed>
 
@@ -36,7 +15,7 @@
                 <i>Inorg. Chem.</i>,&nbsp;
                 <b>2016</b>,&nbsp;
                 <i>55</i>,&nbsp;5787-5803&nbsp;&nbsp;
-                <a href="http://dx.doi.org/10.1021/acs.inorgchem.5b02995">10.1021/acs.inorgchem.5b02995</a>
+                <a href="http://dx.doi.org/10.1021/acs.inorgchem.5b02995">doi:10.1021/acs.inorgchem.5b02995</a>
                 <br><br>
             </li>
 
@@ -45,7 +24,7 @@
                 <i>J. Phys. Chem. A</i>,
                 <b>2015</b>,&nbsp;
                 <i>199</i>,&nbsp;8724-8733&nbsp;&nbsp;
-                <a href="http://dx.doi.org/10.1021/acs.jpca.5b04116">10.1021/acs.jpca.5b04116</a>
+                <a href="http://dx.doi.org/10.1021/acs.jpca.5b04116">doi:10.1021/acs.jpca.5b04116</a>
                 <br><br>
             </li>
 
@@ -62,7 +41,7 @@
                 Allen, C.; McCann, B. W.; Acevedo, O.  “Ionic Liquid Effects on Nucleophilic Aromatic
                 Substitution Reactions from QM/MM Simulations”
                 <i>J. Phys. Chem. B</i>,
-                <b>2014</b>, 
+                <b>2014</b>,
                 <i>119</i>,
                 743–752&nbsp;&nbsp;
                 <a href=http://dx.doi.org/10.1021/jp504967r>doi:10.1021/jp504967r</a>
