--- a/edu_and_pubs.html
+++ b/edu_and_pubs.html
@@ -6,8 +6,21 @@
 </head>
 
 <body>
+
+    <h1>Education</h1>
+    <div class="edu-list" style="text-align: left;">
+        <p><b>Oak Ridge National Laboratory</b> <i>2013-2015</i><br>
+              Postdoctoral Research Fellow<br>
+              Chemical Separations Group</p>
+        <p><b>Auburn University</b> <i>2008-2013</i><br>
+               Research and Teaching Assistant<br>
+               Acevedo Research Group</p>
+        <p><b>Troy University</b> <i>2004-2008</i><br>
+              Bachelors of Science: Chemistry & Mathematics <i>(summa cum laude)</i>
+        </p>
+    </div>
     <h1>Publications</h1>
-    <div style=text-align:left>
+    <div class="pub-list" style="text-align:left">
         <ol reversed>
 
             <li>McCann, B. W.; de Silva, Nuwan; Windus, T. L.; Gordon, M. S.; Moyer, B.; Bryantsev,
