pubs --> overall scholarship

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
   <h1>Billy Wayne McCann, Ph.D.</h1>
   <div class="main-links">
-    <p><a href="/publications.html">Publications</a></p>
-    <p><a href="/documents/cv.pdf">Curriculum Vitae</p></a>
+    <p><a href="/edu_and_pubs.html">Scholarship</a></p>
     <p><a href="/documents/Chemistry_in_silico.pdf">Dissertation</a></p>
   </div>
   <div class="other-links">
